[package]
name = "rustc-lib"
version = "0.1.0"
authors = ["Lucas Rocha dos Santos <lucas.rocha@icomp.ufam.edu.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.12"
libc = "0.2.86"

[lib]
name = "rustc_http"
crate-type = ["cdylib"]
